--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.11.0",
     "lucide-react": "^0.510.0",
-    "next": "15.3.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
